force-app/main/default/objects/OpportunityTrackingItem__c/OpportunityTrackingItem__c.object-meta.xml
<CustomObject>
    <label>Opportunity Tracking Item</label>
    <nameField>
        <displayFormat>OTI-{0000000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Tracking Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>