force-app/main/default/objects/OpportunityTrackingItem__c/fields/PriorValue__c.field-meta.xml
<CustomField>
    <fullName>PriorValue__c</fullName>
    <label>Prior Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>