force-app/main/default/objects/OpportunityTrackingItem__c/fields/Step__c.field-meta.xml
<CustomField>
    <fullName>Step__c</fullName>
    <label>Step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Enrollment</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Stalled</fullName>
            </value>
            <value>
                <fullName>MSA and T&amp;Cs</fullName>
            </value>
            <value>
                <fullName>Tax-Exempt Cert</fullName>
            </value>
            <value>
                <fullName>Banking Details</fullName>
            </value>
            <value>
                <fullName>W9</fullName>
            </value>
            <value>
                <fullName>Vet/Staff List</fullName>
            </value>
            <value>
                <fullName>EULA</fullName>
            </value>
            <value>
                <fullName>Procurement Setup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>